# HideStringInImage

./: .gitignore  .gitmodules  CMakeLists.txt
src/: errors.h  main.c
src/encoder/: encoder.c  encoder.h
src/message_hider/: message_hider.c  message_hider.h
